--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    @apply min-h-screen bg-background scroll-smooth;
+html,
+body {
+	@apply min-h-screen bg-background scroll-smooth;
 }
